--- a/src/index.css
+++ b/src/index.css
@@ -1795,8 +1795,16 @@ html{
   display: none;
 }
 
+.h-10{
+  height: 2.5rem;
+}
+
 .h-\[100\%\]{
   height: 100%;
+}
+
+.h-\[100px\]{
+  height: 100px;
 }
 
 .h-\[21px\]{
@@ -1829,6 +1837,22 @@ html{
 
 .h-\[80\%\]{
   height: 80%;
+}
+
+.h-20{
+  height: 5rem;
+}
+
+.h-\[10px\]{
+  height: 10px;
+}
+
+.h-\[1px\]{
+  height: 1px;
+}
+
+.h-\[124px\]{
+  height: 124px;
 }
 
 .w-\[100\%\]{
