--- a/src/index.css
+++ b/src/index.css
@@ -833,6 +833,25 @@ html{
   outline-offset: 2px;
 }
 
+.card-body{
+  display: flex;
+  flex: 1 1 auto;
+  flex-direction: column;
+  padding: var(--padding-card, 2rem);
+  gap: 0.5rem;
+}
+
+.card-body :where(p){
+  flex-grow: 1;
+}
+
+.card-actions{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  gap: 0.5rem;
+}
+
 .card figure{
   display: flex;
   align-items: center;
@@ -1327,6 +1346,15 @@ html{
   line-height: 1.25rem;
 }
 
+.card-title{
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  font-weight: 600;
+}
+
 .card.image-full :where(figure){
   overflow: hidden;
   border-radius: inherit;
@@ -1641,6 +1669,26 @@ html{
   border-bottom-right-radius: var(--rounded-btn, 0.5rem);
 }
 
+.card-compact .card-body{
+  padding: 1rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.card-compact .card-title{
+  margin-bottom: 0.25rem;
+}
+
+.card-normal .card-body{
+  padding: var(--padding-card, 2rem);
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.card-normal .card-title{
+  margin-bottom: 0.75rem;
+}
+
 .absolute{
   position: absolute;
 }
@@ -1795,16 +1843,20 @@ html{
   display: none;
 }
 
-.h-10{
-  height: 2.5rem;
+.h-20{
+  height: 5rem;
 }
 
 .h-\[100\%\]{
   height: 100%;
 }
 
-.h-\[100px\]{
-  height: 100px;
+.h-\[124px\]{
+  height: 124px;
+}
+
+.h-\[150px\]{
+  height: 150px;
 }
 
 .h-\[21px\]{
@@ -1839,20 +1891,8 @@ html{
   height: 80%;
 }
 
-.h-20{
-  height: 5rem;
-}
-
-.h-\[10px\]{
-  height: 10px;
-}
-
-.h-\[1px\]{
-  height: 1px;
-}
-
-.h-\[124px\]{
-  height: 124px;
+.min-h-screen{
+  min-height: 100vh;
 }
 
 .w-\[100\%\]{
@@ -1979,6 +2019,10 @@ html{
   justify-content: space-between;
 }
 
+.gap-4{
+  gap: 1rem;
+}
+
 .overflow-hidden{
   overflow: hidden;
 }
@@ -2008,6 +2052,11 @@ html{
   border-top-color: rgb(63 62 69 / var(--tw-border-opacity));
 }
 
+.bg-base-100{
+  --tw-bg-opacity: 1;
+  background-color: hsl(var(--b1) / var(--tw-bg-opacity));
+}
+
 .bg-dimBlue{
   background-color: rgba(9, 151, 124, 0.1);
 }
@@ -2024,6 +2073,10 @@ html{
 
 .p-2{
   padding: 0.5rem;
+}
+
+.p-4{
+  padding: 1rem;
 }
 
 .p-6{
@@ -2126,6 +2179,12 @@ html{
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.shadow-xl{
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 :root {
@@ -2321,6 +2380,10 @@ html{
 
   .sm\:hidden{
     display: none;
+  }
+
+  .sm\:w-96{
+    width: 24rem;
   }
 
   .sm\:flex-row{
