--- a/src/index.css
+++ b/src/index.css
@@ -1022,6 +1022,46 @@ html{
   justify-self: end;
 }
 
+.modal{
+  pointer-events: none;
+  position: fixed;
+  inset: 0px;
+  margin: 0px;
+  display: grid;
+  height: 100%;
+  max-height: none;
+  width: 100%;
+  max-width: none;
+  justify-items: center;
+  padding: 0px;
+  opacity: 0;
+  overscroll-behavior: contain;
+  z-index: 999;
+  background-color: transparent;
+  color: inherit;
+  transition-duration: 200ms;
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  transition-property: transform, opacity, visibility;
+  overflow-y: hidden;
+}
+
+:where(.modal){
+  align-items: center;
+}
+
+.modal-open,
+.modal:target,
+.modal-toggle:checked + .modal,
+.modal[open]{
+  pointer-events: auto;
+  visibility: visible;
+  opacity: 1;
+}
+
+:root:has(:is(.modal-open, .modal:target, .modal-toggle:checked + .modal, .modal[open])){
+  overflow: hidden;
+}
+
 .navbar{
   display: flex;
   align-items: center;
@@ -1467,6 +1507,22 @@ html{
   margin-top: 0;
 }
 
+.modal:not(dialog:not(.modal-open)),
+  .modal::backdrop{
+  background-color: rgba(0, 0, 0, 0.3);
+  animation: modal-pop 0.2s ease-out;
+}
+
+.modal-open .modal-box,
+.modal-toggle:checked + .modal .modal-box,
+.modal:target .modal-box,
+.modal[open] .modal-box{
+  --tw-translate-y: 0px;
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 @keyframes modal-pop{
   0%{
     opacity: 0;
@@ -1689,12 +1745,20 @@ html{
   margin-bottom: 0.75rem;
 }
 
+.fixed{
+  position: fixed;
+}
+
 .absolute{
   position: absolute;
 }
 
 .relative{
   position: relative;
+}
+
+.inset-0{
+  inset: 0px;
 }
 
 .bottom-20{
@@ -1731,6 +1795,10 @@ html{
 
 .z-\[5\]{
   z-index: 5;
+}
+
+.z-50{
+  z-index: 50;
 }
 
 .mx-4{
@@ -1829,6 +1897,13 @@ html{
 
 .mt-6{
   margin-top: 1.5rem;
+}
+
+.line-clamp-3{
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
 }
 
 .block{
@@ -1939,6 +2014,10 @@ html{
   width: 100%;
 }
 
+.w-96{
+  width: 24rem;
+}
+
 .min-w-\[140px\]{
   min-width: 140px;
 }
@@ -2027,6 +2106,12 @@ html{
   overflow: hidden;
 }
 
+.truncate{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 .rounded-\[10px\]{
   border-radius: 10px;
 }
@@ -2064,6 +2149,11 @@ html{
 .bg-primary{
   --tw-bg-opacity: 1;
   background-color: rgb(0 4 15 / var(--tw-bg-opacity));
+}
+
+.bg-base-200{
+  --tw-bg-opacity: 1;
+  background-color: hsl(var(--b2) / var(--tw-bg-opacity));
 }
 
 .object-contain{
@@ -2134,6 +2224,11 @@ html{
 
 .text-\[52px\]{
   font-size: 52px;
+}
+
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-medium{
