--- a/src/index.css
+++ b/src/index.css
@@ -845,13 +845,6 @@ html{
   flex-grow: 1;
 }
 
-.card-actions{
-  display: flex;
-  flex-wrap: wrap;
-  align-items: flex-start;
-  gap: 0.5rem;
-}
-
 .card figure{
   display: flex;
   align-items: center;
@@ -1020,46 +1013,6 @@ html{
 
 :where(.menu li) .badge{
   justify-self: end;
-}
-
-.modal{
-  pointer-events: none;
-  position: fixed;
-  inset: 0px;
-  margin: 0px;
-  display: grid;
-  height: 100%;
-  max-height: none;
-  width: 100%;
-  max-width: none;
-  justify-items: center;
-  padding: 0px;
-  opacity: 0;
-  overscroll-behavior: contain;
-  z-index: 999;
-  background-color: transparent;
-  color: inherit;
-  transition-duration: 200ms;
-  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
-  transition-property: transform, opacity, visibility;
-  overflow-y: hidden;
-}
-
-:where(.modal){
-  align-items: center;
-}
-
-.modal-open,
-.modal:target,
-.modal-toggle:checked + .modal,
-.modal[open]{
-  pointer-events: auto;
-  visibility: visible;
-  opacity: 1;
-}
-
-:root:has(:is(.modal-open, .modal:target, .modal-toggle:checked + .modal, .modal[open])){
-  overflow: hidden;
 }
 
 .navbar{
@@ -1507,22 +1460,6 @@ html{
   margin-top: 0;
 }
 
-.modal:not(dialog:not(.modal-open)),
-  .modal::backdrop{
-  background-color: rgba(0, 0, 0, 0.3);
-  animation: modal-pop 0.2s ease-out;
-}
-
-.modal-open .modal-box,
-.modal-toggle:checked + .modal .modal-box,
-.modal:target .modal-box,
-.modal[open] .modal-box{
-  --tw-translate-y: 0px;
-  --tw-scale-x: 1;
-  --tw-scale-y: 1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 @keyframes modal-pop{
   0%{
     opacity: 0;
@@ -1745,20 +1682,12 @@ html{
   margin-bottom: 0.75rem;
 }
 
-.fixed{
-  position: fixed;
-}
-
 .absolute{
   position: absolute;
 }
 
 .relative{
   position: relative;
-}
-
-.inset-0{
-  inset: 0px;
 }
 
 .bottom-20{
@@ -1797,8 +1726,8 @@ html{
   z-index: 5;
 }
 
-.z-50{
-  z-index: 50;
+.m-auto{
+  margin: auto;
 }
 
 .mx-4{
@@ -1899,13 +1828,6 @@ html{
   margin-top: 1.5rem;
 }
 
-.line-clamp-3{
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 3;
-}
-
 .block{
   display: block;
 }
@@ -1970,8 +1892,16 @@ html{
   min-height: 100vh;
 }
 
+.w-96{
+  width: 24rem;
+}
+
 .w-\[100\%\]{
   width: 100%;
+}
+
+.w-\[100vw\]{
+  width: 100vw;
 }
 
 .w-\[124px\]{
@@ -2012,10 +1942,6 @@ html{
 
 .w-full{
   width: 100%;
-}
-
-.w-96{
-  width: 24rem;
 }
 
 .min-w-\[140px\]{
@@ -2151,11 +2077,6 @@ html{
   background-color: rgb(0 4 15 / var(--tw-bg-opacity));
 }
 
-.bg-base-200{
-  --tw-bg-opacity: 1;
-  background-color: hsl(var(--b2) / var(--tw-bg-opacity));
-}
-
 .object-contain{
   -o-object-fit: contain;
      object-fit: contain;
@@ -2206,6 +2127,10 @@ html{
   text-align: center;
 }
 
+.align-middle{
+  vertical-align: middle;
+}
+
 .font-poppins{
   font-family: Poppins, sans-serif;
 }
@@ -2224,11 +2149,6 @@ html{
 
 .text-\[52px\]{
   font-size: 52px;
-}
-
-.text-xl{
-  font-size: 1.25rem;
-  line-height: 1.75rem;
 }
 
 .font-medium{
@@ -2477,8 +2397,8 @@ html{
     display: none;
   }
 
-  .sm\:w-96{
-    width: 24rem;
+  .sm\:w-\[80vw\]{
+    width: 80vw;
   }
 
   .sm\:flex-row{
