--- a/src/x.css
+++ b/src/x.css
@@ -23,12 +23,12 @@
 .text-gradient {
   background: radial-gradient(
     64.18% 64.18% at 71.16% 35.69%,
-    #def9fa 0.89%,
-    #bef3f5 17.23%,
-    #9dedf0 42.04%,
-    #7de7eb 55.12%,
-    #5ce1e6 71.54%,
-    #33bbcf 100%
+    #edfade 0.89%,
+    #b3e7bd 17.23%,
+    #95e77c 42.04%,
+    #61df7f 55.12%,
+    #48e450 71.54%,
+    #05ca30 100%
   );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
