--- a/src/index.css
+++ b/src/index.css
@@ -447,17 +447,24 @@ html{
 }
 
 :root{
-  color-scheme: light;
-  --pf: 259 94% 44%;
-  --sf: 314 100% 40%;
-  --af: 174 75% 39%;
-  --nf: 214 20% 14%;
+  --su: 83 78% 55%;
+  --pf: 0 0% 0%;
+  --sf: 0 0% 0%;
+  --af: 0 0% 0%;
+  --nf: 0 0% 0%;
+  --b1: 100 0 0;
+  --b2: 0 0% 0%;
+  --b3: 0 0% 0%;
   --in: 198 93% 60%;
-  --su: 158 64% 52%;
   --wa: 43 96% 56%;
   --er: 0 91% 71%;
+  --bc: 145 0% 78%;
+  --pc: 145 0% 78%;
+  --sc: 145 0% 78%;
+  --ac: 145 0% 78%;
+  --nc: 145 0% 78%;
   --inc: 198 100% 12%;
-  --suc: 158 100% 10%;
+  --suc: 83 38% 13%;
   --wac: 43 100% 11%;
   --erc: 0 100% 14%;
   --rounded-box: 1rem;
@@ -470,173 +477,6 @@ html{
   --border-btn: 1px;
   --tab-border: 1px;
   --tab-radius: 0.5rem;
-  --p: 259 94% 51%;
-  --pc: 259 96% 91%;
-  --s: 314 100% 47%;
-  --sc: 314 100% 91%;
-  --a: 174 75% 46%;
-  --ac: 174 75% 11%;
-  --n: 214 20% 21%;
-  --nc: 212 19% 87%;
-  --b1: 0 0% 100%;
-  --b2: 0 0% 95%;
-  --b3: 180 2% 90%;
-  --bc: 215 28% 17%;
-}
-
-@media (prefers-color-scheme: dark){
-  :root{
-    color-scheme: dark;
-    --pf: 262 80% 43%;
-    --sf: 316 70% 43%;
-    --af: 175 70% 34%;
-    --in: 198 93% 60%;
-    --su: 158 64% 52%;
-    --wa: 43 96% 56%;
-    --er: 0 91% 71%;
-    --inc: 198 100% 12%;
-    --suc: 158 100% 10%;
-    --wac: 43 100% 11%;
-    --erc: 0 100% 14%;
-    --rounded-box: 1rem;
-    --rounded-btn: 0.5rem;
-    --rounded-badge: 1.9rem;
-    --animation-btn: 0.25s;
-    --animation-input: .2s;
-    --btn-text-case: uppercase;
-    --btn-focus-scale: 0.95;
-    --border-btn: 1px;
-    --tab-border: 1px;
-    --tab-radius: 0.5rem;
-    --p: 262 80% 50%;
-    --pc: 0 0% 100%;
-    --s: 316 70% 50%;
-    --sc: 0 0% 100%;
-    --a: 175 70% 41%;
-    --ac: 0 0% 100%;
-    --n: 213 18% 20%;
-    --nf: 212 17% 17%;
-    --nc: 220 13% 69%;
-    --b1: 212 18% 14%;
-    --b2: 213 18% 12%;
-    --b3: 213 18% 10%;
-    --bc: 220 13% 69%;
-  }
-}
-
-[data-theme=light]{
-  color-scheme: light;
-  --pf: 259 94% 44%;
-  --sf: 314 100% 40%;
-  --af: 174 75% 39%;
-  --nf: 214 20% 14%;
-  --in: 198 93% 60%;
-  --su: 158 64% 52%;
-  --wa: 43 96% 56%;
-  --er: 0 91% 71%;
-  --inc: 198 100% 12%;
-  --suc: 158 100% 10%;
-  --wac: 43 100% 11%;
-  --erc: 0 100% 14%;
-  --rounded-box: 1rem;
-  --rounded-btn: 0.5rem;
-  --rounded-badge: 1.9rem;
-  --animation-btn: 0.25s;
-  --animation-input: .2s;
-  --btn-text-case: uppercase;
-  --btn-focus-scale: 0.95;
-  --border-btn: 1px;
-  --tab-border: 1px;
-  --tab-radius: 0.5rem;
-  --p: 259 94% 51%;
-  --pc: 259 96% 91%;
-  --s: 314 100% 47%;
-  --sc: 314 100% 91%;
-  --a: 174 75% 46%;
-  --ac: 174 75% 11%;
-  --n: 214 20% 21%;
-  --nc: 212 19% 87%;
-  --b1: 0 0% 100%;
-  --b2: 0 0% 95%;
-  --b3: 180 2% 90%;
-  --bc: 215 28% 17%;
-}
-
-[data-theme=dark]{
-  color-scheme: dark;
-  --pf: 262 80% 43%;
-  --sf: 316 70% 43%;
-  --af: 175 70% 34%;
-  --in: 198 93% 60%;
-  --su: 158 64% 52%;
-  --wa: 43 96% 56%;
-  --er: 0 91% 71%;
-  --inc: 198 100% 12%;
-  --suc: 158 100% 10%;
-  --wac: 43 100% 11%;
-  --erc: 0 100% 14%;
-  --rounded-box: 1rem;
-  --rounded-btn: 0.5rem;
-  --rounded-badge: 1.9rem;
-  --animation-btn: 0.25s;
-  --animation-input: .2s;
-  --btn-text-case: uppercase;
-  --btn-focus-scale: 0.95;
-  --border-btn: 1px;
-  --tab-border: 1px;
-  --tab-radius: 0.5rem;
-  --p: 262 80% 50%;
-  --pc: 0 0% 100%;
-  --s: 316 70% 50%;
-  --sc: 0 0% 100%;
-  --a: 175 70% 41%;
-  --ac: 0 0% 100%;
-  --n: 213 18% 20%;
-  --nf: 212 17% 17%;
-  --nc: 220 13% 69%;
-  --b1: 212 18% 14%;
-  --b2: 213 18% 12%;
-  --b3: 213 18% 10%;
-  --bc: 220 13% 69%;
-}
-
-[data-theme=cyberpunk]{
-  color-scheme: light;
-  --pf: 345 100% 66%;
-  --sf: 195 80% 63%;
-  --af: 276 74% 64%;
-  --nf: 57 100% 6%;
-  --b2: 56 100% 43%;
-  --b3: 56 100% 36%;
-  --in: 198 93% 60%;
-  --su: 158 64% 52%;
-  --wa: 43 96% 56%;
-  --er: 0 91% 71%;
-  --bc: 53 46% 13%;
-  --pc: 348 27% 15%;
-  --sc: 196 23% 15%;
-  --ac: 277 22% 15%;
-  --inc: 198 100% 12%;
-  --suc: 158 100% 10%;
-  --wac: 43 100% 11%;
-  --erc: 0 100% 14%;
-  --animation-btn: 0.25s;
-  --animation-input: .2s;
-  --btn-text-case: uppercase;
-  --btn-focus-scale: 0.95;
-  --border-btn: 1px;
-  --tab-border: 1px;
-  font-family: ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,Liberation Mono,Courier New,monospace;
-  --p: 345 100% 73%;
-  --s: 195 80% 70%;
-  --a: 276 74% 71%;
-  --n: 57 100% 13%;
-  --nc: 56 100% 50%;
-  --b1: 56 100% 50%;
-  --rounded-box: 0;
-  --rounded-btn: 0;
-  --rounded-badge: 0;
-  --tab-radius: 0;
 }
 
 *, ::before, ::after{
@@ -906,6 +746,13 @@ html{
     background-color: hsl(var(--sf) / var(--tw-bg-opacity));
   }
 
+  .btn-success:hover{
+    --tw-border-opacity: 1;
+    border-color: hsl(var(--su) / var(--tw-border-opacity));
+    --tw-bg-opacity: 1;
+    background-color: hsl(var(--su) / var(--tw-bg-opacity));
+  }
+
   .btn.glass:hover{
     --glass-opacity: 25%;
     --glass-border-opacity: 15%;
@@ -927,6 +774,15 @@ html{
     background-color: hsl(var(--sf) / var(--tw-bg-opacity));
     --tw-text-opacity: 1;
     color: hsl(var(--sc) / var(--tw-text-opacity));
+  }
+
+  .btn-outline.btn-success:hover{
+    --tw-border-opacity: 1;
+    border-color: hsl(var(--su) / var(--tw-border-opacity));
+    --tw-bg-opacity: 1;
+    background-color: hsl(var(--su) / var(--tw-bg-opacity));
+    --tw-text-opacity: 1;
+    color: hsl(var(--suc) / var(--tw-text-opacity));
   }
 
   .btn-disabled:hover,
@@ -1125,6 +981,16 @@ html{
   background-color: hsl(var(--in) / var(--tw-bg-opacity));
 }
 
+.btn-success{
+  --tw-border-opacity: 1;
+  border-color: hsl(var(--su) / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: hsl(var(--su) / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: hsl(var(--suc) / var(--tw-text-opacity));
+  outline-color: hsl(var(--su) / 1);
+}
+
 .btn-success.btn-active{
   --tw-border-opacity: 1;
   border-color: hsl(var(--su) / var(--tw-border-opacity));
@@ -1214,6 +1080,11 @@ html{
   background-color: hsl(var(--af) / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
   color: hsl(var(--ac) / var(--tw-text-opacity));
+}
+
+.btn-outline.btn-success{
+  --tw-text-opacity: 1;
+  color: hsl(var(--su) / var(--tw-text-opacity));
 }
 
 .btn-outline.btn-success.btn-active{
@@ -1690,40 +1561,16 @@ html{
   position: relative;
 }
 
-.bottom-20{
-  bottom: 5rem;
-}
-
-.bottom-40{
-  bottom: 10rem;
-}
-
 .right-0{
   right: 0px;
-}
-
-.right-20{
-  right: 5rem;
-}
-
-.top-0{
-  top: 0px;
 }
 
 .top-20{
   top: 5rem;
 }
 
-.z-\[0\]{
-  z-index: 0;
-}
-
-.z-\[1\]{
-  z-index: 1;
-}
-
-.z-\[5\]{
-  z-index: 5;
+.z-\[6\]{
+  z-index: 6;
 }
 
 .m-auto{
@@ -1738,11 +1585,6 @@ html{
 .mx-6{
   margin-left: 1.5rem;
   margin-right: 1.5rem;
-}
-
-.my-10{
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
 }
 
 .my-2{
@@ -1766,6 +1608,10 @@ html{
 
 .mb-1{
   margin-bottom: 0.25rem;
+}
+
+.mb-10{
+  margin-bottom: 2.5rem;
 }
 
 .mb-2{
@@ -1868,10 +1714,6 @@ html{
   height: 32px;
 }
 
-.h-\[35\%\]{
-  height: 35%;
-}
-
 .h-\[50\%\]{
   height: 50%;
 }
@@ -1880,20 +1722,8 @@ html{
   height: 64px;
 }
 
-.h-\[72px\]{
-  height: 72px;
-}
-
-.h-\[80\%\]{
-  height: 80%;
-}
-
 .min-h-screen{
   min-height: 100vh;
-}
-
-.w-96{
-  width: 24rem;
 }
 
 .w-\[100\%\]{
@@ -1904,8 +1734,8 @@ html{
   width: 100vw;
 }
 
-.w-\[124px\]{
-  width: 124px;
+.w-\[150px\]{
+  width: 150px;
 }
 
 .w-\[21px\]{
@@ -1924,20 +1754,12 @@ html{
   width: 32px;
 }
 
-.w-\[40\%\]{
-  width: 40%;
-}
-
 .w-\[50\%\]{
   width: 50%;
 }
 
 .w-\[64px\]{
   width: 64px;
-}
-
-.w-\[80\%\]{
-  width: 80%;
 }
 
 .w-full{
@@ -2219,12 +2041,12 @@ html{
 .text-gradient {
   background: radial-gradient(
     64.18% 64.18% at 71.16% 35.69%,
-    #def9fa 0.89%,
-    #bef3f5 17.23%,
-    #9dedf0 42.04%,
-    #7de7eb 55.12%,
-    #5ce1e6 71.54%,
-    #33bbcf 100%
+    #edfade 0.89%,
+    #b3e7bd 17.23%,
+    #95e77c 42.04%,
+    #61df7f 55.12%,
+    #48e450 71.54%,
+    #05ca30 100%
   );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -2422,11 +2244,6 @@ html{
 }
 
 @media (min-width: 1060px){
-  .md\:my-0{
-    margin-top: 0px;
-    margin-bottom: 0px;
-  }
-
   .md\:ml-10{
     margin-left: 2.5rem;
   }
