--- a/src/index.css
+++ b/src/index.css
@@ -1598,10 +1598,6 @@ html{
   margin-bottom: 0.75rem;
 }
 
-.fixed{
-  position: fixed;
-}
-
 .absolute{
   position: absolute;
 }
@@ -1620,10 +1616,6 @@ html{
 
 .z-\[6\]{
   z-index: 6;
-}
-
-.m-auto{
-  margin: auto;
 }
 
 .mx-4{
@@ -1735,6 +1727,10 @@ html{
   height: 100%;
 }
 
+.h-\[100px\]{
+  height: 100px;
+}
+
 .h-\[124px\]{
   height: 124px;
 }
@@ -1763,12 +1759,12 @@ html{
   height: auto;
 }
 
-.min-h-screen{
-  min-height: 100vh;
-}
-
 .w-\[100\%\]{
   width: 100%;
+}
+
+.w-\[100px\]{
+  width: 100px;
 }
 
 .w-\[100vw\]{
@@ -1803,8 +1799,16 @@ html{
   width: 100%;
 }
 
-.w-\[80vw\]{
-  width: 80vw;
+.w-10{
+  width: 2.5rem;
+}
+
+.w-40{
+  width: 10rem;
+}
+
+.w-20{
+  width: 5rem;
 }
 
 .min-w-\[140px\]{
@@ -1922,28 +1926,18 @@ html{
   border-top-color: rgb(63 62 69 / var(--tw-border-opacity));
 }
 
-.bg-base-200{
-  --tw-bg-opacity: 1;
-  background-color: hsl(var(--b2) / var(--tw-bg-opacity));
-}
-
 .bg-dimBlue{
   background-color: rgba(9, 151, 124, 0.1);
-}
-
-.bg-primary{
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 4 15 / var(--tw-bg-opacity));
-}
-
-.bg-gray-200{
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
 .bg-gray-800{
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+}
+
+.bg-primary{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 4 15 / var(--tw-bg-opacity));
 }
 
 .object-contain{
@@ -2008,10 +2002,6 @@ html{
 
 .text-\[52px\]{
   font-size: 52px;
-}
-
-.text-\[42px\]{
-  font-size: 42px;
 }
 
 .font-medium{
@@ -2218,10 +2208,6 @@ html{
 
   .ss\:text-\[72px\]{
     font-size: 72px;
-  }
-
-  .ss\:text-\[68px\]{
-    font-size: 68px;
   }
 
   .ss\:leading-\[100\.8px\]{
