--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap");
 
+@import url('https://fonts.googleapis.com/css2?family=Tektur:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Acme&display=swap');
 /*
 ! tailwindcss v3.3.3 | MIT License | https://tailwindcss.com
 */
@@ -1655,16 +1657,16 @@ html{
   margin-bottom: 2.5rem;
 }
 
+.mb-2{
+  margin-bottom: 0.5rem;
+}
+
 .mb-4{
   margin-bottom: 1rem;
 }
 
 .mb-6{
   margin-bottom: 1.5rem;
-}
-
-.mb-8{
-  margin-bottom: 2rem;
 }
 
 .ml-0{
@@ -1731,8 +1733,8 @@ html{
   height: 100px;
 }
 
-.h-\[124px\]{
-  height: 124px;
+.h-\[120px\]{
+  height: 120px;
 }
 
 .h-\[150px\]{
@@ -1771,16 +1773,12 @@ html{
   width: 100vw;
 }
 
-.w-\[150px\]{
-  width: 150px;
+.w-\[130px\]{
+  width: 130px;
 }
 
 .w-\[21px\]{
   width: 21px;
-}
-
-.w-\[266px\]{
-  width: 266px;
 }
 
 .w-\[28px\]{
@@ -1797,18 +1795,6 @@ html{
 
 .w-full{
   width: 100%;
-}
-
-.w-10{
-  width: 2.5rem;
-}
-
-.w-40{
-  width: 10rem;
-}
-
-.w-20{
-  width: 5rem;
 }
 
 .min-w-\[140px\]{
@@ -1837,10 +1823,6 @@ html{
 
 .flex-\[1\]{
   flex: 1;
-}
-
-.grow{
-  flex-grow: 1;
 }
 
 .cursor-pointer{
@@ -1889,6 +1871,10 @@ html{
 
 .justify-between{
   justify-content: space-between;
+}
+
+.justify-items-center{
+  justify-items: center;
 }
 
 .gap-4{
@@ -1982,6 +1968,10 @@ html{
 
 .align-middle{
   vertical-align: middle;
+}
+
+.font-acme{
+  font-family: Acme, sans-serif;
 }
 
 .font-poppins{
