--- a/src/input.css
+++ b/src/input.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Tektur:wght@500&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Acme&display=swap');
 /*
 ! tailwindcss v3.3.3 | MIT License | https://tailwindcss.com
 */
@@ -1947,7 +1948,7 @@ html{
 }
 
 .font-poppins{
-  font-family: Poppins, sans-serif;
+  font-family: Poppins, sans-serif,Tektur;
 }
 
 .text-\[16px\]{
