--- a/src/x.css
+++ b/src/x.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Tektur:wght@500&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Acme&display=swap');
 @import "tailwindcss/base";
 
 @import "tailwindcss/components";
